[package]
name = "hej"
version = "0.1.0"
authors = ["William"]
edition = "2021"
build = "build.rs"
description = "hej11"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
slint = "1.6"

[build-dependencies]
slint-build = "1.6"

[package.metadata.bundle]
namn = "hej"
identifier = "io.github.William.project"